# -*- coding: utf-8 -*-

2009-03-31  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/spec_fetcher.rb:  If the cached specs file won't load,
	  refetch.  Bug #24961 by Dylan Stamat.
	* lib/rubygems/defaults.rb:  Add a sanity check to
	  Gem.default_exec_format.  Workaround for bug #24958 by Michael
	  Soulier.
	* lib/rubygems/commands/setup_command.rb:  Fix confusion with option
	  names.  Patch #24971 by Richard Brown.
	* lib/rubygems/specification.rb:  Make #validate complain about
	  not-files.
	* lib/gauntlet_rubygems.rb:  For verification of the validator.

2009-03-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  RubyGems now loads plugins from rubygems_plugin.rb
	  in installed gems.  This can be used to add commands (See
	  Gem::CommandManager) or add install/uninstall hooks (See
	  Gem::Installer and Gem::Uninstaller).
	* setup.rb:  Ensure we're in a RubyGems dir when installing.

2009-03-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package_task.rb:  Import from Rake's
	  rake/gempackagetask.rb
	* Rakefile:  Switched to RDoc::Task from RDoc 2.4.2.
	* lib/rubygems.rb:  Gem.find_files now returns paths in $LOAD_PATH.
	* lib/rubygems/commands/sources_command.rb:  Allow sources to be added
	  behind proxies.  Bug #24785 by Elia Schito.

2009-03-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/install_command.rb:  Fix typo.  Patch #24446
	  by Luis Parravicini.
	* lib/rubygems/version.rb:  Handle non-String versions by calling
	  #to_s.  Patch #24392 by Stephen Bannasch.

2009-03-22  Daniel Berger <djberg96@gmail.com>

   * lib/rubygems/remote_fetcher.rb: Always escape URI's to deal with spaces
     and such, regardless of platform.
   * lib/rubygesm/validator.rb: Use the test-unit gem if installed.
     Part of the fix for RF #24261
   * lib/rubygems/commands/install_command.rb: Explictly require
     rubygems/uninstaller.rb if the user wants to bail because of failed
     tests.
     Part of the fix for RF #24261
