@@ -1,5 +1,10 @@
 # -*- coding: utf-8 -*-
 
+2009-04-02  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/commands/setup_command.rb:  Fix --destdir.  Patch
+	  #24970 by Richard Brown.
+
 2009-03-31  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/spec_fetcher.rb:  If the cached specs file won't load,
